Fix vertical align for btn-go

--- a/css/main.less
+++ b/css/main.less
@@ -150,9 +150,10 @@ h2 {
     width: 100%;
     height: 660px;
     overflow: hidden;
-    background-image: url(../img/bg-scheme.png);
-    background-size: cover;
-    background-position: center;
+    background-color: #050202;
+    // background-image: url(../img/bg-scheme.png);
+    // background-size: cover;
+    // background-position: center;
 }
 
 .container-slider {
@@ -291,6 +292,10 @@ h2 {
     h4 {
         width: 398px;
     }
+
+    .icon-go {
+        vertical-align: inherit;
+    } 
 }
 
 .icon {
